# Friendly-LwM2M-Client

./: ADD_XML_OBJECTS.md  CMakeLists.txt  CPP_ORGANIZATION.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  README_Command_Interface.md  README_NodeJS_Bridge.md  README_TypeScript.md  TYPESCRIPT_FOCUS.md  fix_todos.sh  fix_todos_complete.sh  package.json  tsconfig.json  wpp_env_setup.sh
.cache/clangd/index/: Accelerometer.cpp.607C548358AB3003.idx  Accelerometer.h.25E5907C8015FACA.idx  AccelerometerConfig.h.D1B93862FE279374.idx  AccelerometerInfo.h.393F6F8F9CB875D6.idx  AnalogInput.cpp.511C693D8051F491.idx  AnalogInput.h.960DE39E81B1D743.idx  AnalogInputConfig.h.6BDFD7F8F882D1BE.idx  AnalogInputInfo.h.BC273F6DDBD143AB.idx  AnalogOutput.cpp.1CE7EAF4484572C7.idx  AnalogOutput.h.3A139158C6524B8A.idx  AnalogOutputConfig.h.DC47F205001F5DFC.idx  AnalogOutputInfo.h.617A491616FF732C.idx  AudioClip.cpp.4988D9D86472B97A.idx  AudioClip.h.42FDCAFA49B02D96.idx  AudioClipConfig.h.479440454885DA21.idx  AudioClipInfo.h.4D482D1D8174B83B.idx  AudioClipTest.cpp.34D27EEF22099261.idx  Connection.cpp.52E160A90F84D963.idx  Connection.h.8FF4B480B9D50DD9.idx  ConnectivityMonitoring.cpp.F13268578DC60929.idx  ConnectivityMonitoring.h.5775CFBFCEB8ED2C.idx  ConnectivityMonitoringConfig.h.4A039F92BB297B06.idx  ConnectivityMonitoringInfo.h.42743A8E534347CE.idx  ConnectivityMonitoringTest.cpp.EC9B1280E29541D8.idx  Current.cpp.C7ACD9F7EB13AE52.idx  Current.h.7A0835FF9B7F5B2D.idx  CurrentConfig.h.D6A03A84F2D29783.idx  CurrentInfo.h.267DCC7BF5F37033.idx  Device.cpp.FAD960C76832EB2A.idx  Device.h.9C090C4C1ED53804.idx  DeviceConfig.h.A32F40BE19E0F139.idx  DeviceInfo.h.A7E17602063E4BDA.idx  DeviceTest.cpp.F83410219C1406CB.idx  DigitalOutput.cpp.63B2FF76D9ADA1E6.idx  DigitalOutput.h.B007FC6B4BAA5D97.idx  DigitalOutputConfig.h.EEAD3C64BD7504FC.idx  DigitalOutputInfo.h.42B4504A35A60762.idx  FirmwareChecker.h.B56F67A256D82472.idx  FirmwareUpdTest.cpp.CE58F402D4EF317C.idx  (+281 more)
bridge/: CMakeLists.txt  README.md
bridge/include/: NodeJsBridge.h  SignalKLwM2MConfig.h
bridge/src/: signalk_main.cpp
config/: add_xml_objects.sh  add_xml_objects_clean.sh  settings.json  signalk-lwm2m.json
examples/: CMakeLists.txt
examples/linux/: CMakeLists.txt  main.cpp  objects.cpp  objects.h
examples/raspberry_pi/: main.cpp  objects.cpp  objects.h  read_config.cpp  read_config.h  signalk-lwm2m-config.cmake  signalk-lwm2m.json  test_config.json  websocket_access_test.cpp  websocket_stream_test.cpp  websockets.cpp
examples/raspberry_pi/websocket/: CMakeLists.txt  JsonConfig.cpp  JsonConfig.h  README.md  SignalKAccess.cpp  SignalKAccess.h  WebSocketClient.cpp  WebSocketClient.h
examples/raspberry_pi/websocket/discovery/: Discovery.cpp  Discovery.h
legacy/: README.md  lwm2m-cli.js  lwm2m_bridge.js  lwm2m_config_manager.js  signalk_lwm2m_config_manager.js
public/: control.html  index.html
src/: index.js  index.ts  lwm2m-bridge.js  lwm2m-bridge.ts  lwm2m-cli.js  lwm2m-cli.ts  signalk-lwm2m-config-manager.js  signalk-lwm2m-config-manager.ts
src/types/: lwm2m.js  lwm2m.ts
utils/object_maker/: add_xml_objects.sh  lwm2m-object-3342.xml
wpp/configs/: compiler_config.cmake  wpp_config.cmake
wpp/platform/: WppPlatform.h
wpp/registry/: ObjectID.h  WppRegistry.cpp  WppRegistry.h
(+183 files in other folders)
